More GHQ testing

--- a/functions/test-db/json2/goodhq/sass.scss
+++ b/functions/test-db/json2/goodhq/sass.scss
@@ -243,7 +243,36 @@ a:hover {
     }
 }
 
+.user-canvas {
+    padding-top: 0;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.6)), url("assets/images/ghq-organisation-default-banner-1280x221.jpg");
+    background-size: cover;
+    padding-bottom: $spacing-unit*1.1;
 
+    .cta {
+        margin-top: -40px;
+        .btn {
+            height: $spacing-unit*2;
+            line-height: 2.9rem;
+            font-size: 1.6rem;
+            font-weight: $button-font-weight;
+            margin: 0;
+            vertical-align: middle;
+            padding: $spacing-unit/4 1.5rem $spacing-unit/4 $spacing-unit/2;
+            .glyphicon {
+                top: 7px !important;
+                position: relative !important;
+                float: left;
+            }
+        }
+    }
+}
+
+.user-canvas:before {
+    content: "";
+    display: block;
+    padding-bottom: 18%;
+}
 
 
 footer a {
