--- a/functions/test-db/json2/goodhq/templates/home.hbs
+++ b/functions/test-db/json2/goodhq/templates/home.hbs
@@ -50,7 +50,7 @@
     </div>
 </div>
 
-<div class="container-fluid container-home ng-scope" ng-class="{unauthenticated: !login}">
+<div class="container-fluid container-home">
     <div class="row">
         <div class="col-xs-12">
             <h1>Featured reviews</h1>
@@ -72,7 +72,7 @@
     <div class="row">
         <div class="col-xs-12">
             <h1>Featured posts</h1>
-            <h2>Find out what good causes and charities are talking about - <a href="search({mode:'post'})">more posts</a></h2>
+            <h2>Find out what good causes and charities are talking about - <a href="/posts">more posts</a></h2>
         </div>
     </div>
     <div class="row">
