--- a/functions/test-db/json2/goodhq/templates/profile.hbs
+++ b/functions/test-db/json2/goodhq/templates/profile.hbs
@@ -1,25 +1,38 @@
-<h1>Profile:</h1>
 {{#with primaryResponse.hits.hits.[0]._source}}
 {{{rendered.ghq_profile_header}}}
-{{{rendered.ghq_profile_info}}}
 {{/with}}
 
-<h2>Reviews</h2>
-{{#each supplimentaryResponses.reviews.hits.hits}}
-{{{this._source.rendered.ghq_list}}}
-{{/each}}
+<div class="container-fluid">
+    <div class="mdc-layout-grid">
+        <div class="mdc-layout-grid__inner">
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 sidebar profile-sidebar">
+                {{#with primaryResponse.hits.hits.[0]._source}}
+                {{{rendered.ghq_profile_info}}}
+                {{/with}}
+            </div>
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8 content profile-content">
 
-<h2>Posts</h2>
-{{#each supplimentaryResponses.posts.hits.hits}}
-{{{this._source.rendered.ghq_list}}}
-{{/each}}
+                <h2>Reviews</h2>
+                {{#each supplimentaryResponses.reviews.hits.hits}}
+                {{{this._source.rendered.ghq_list}}}
+                {{/each}}
 
-<h2>Volunteering opportunities</h2>
-{{#each supplimentaryResponses.volopps.hits.hits}}
-{{{this._source.rendered.ghq_list}}}
-{{/each}}
+                <h2>Posts</h2>
+                {{#each supplimentaryResponses.posts.hits.hits}}
+                {{{this._source.rendered.ghq_list}}}
+                {{/each}}
 
-<h2>Jobs</h2>
-{{#each supplimentaryResponses.jobs.hits.hits}}
-{{{this._source.rendered.ghq_list}}}
-{{/each}}
+                <h2>Volunteering opportunities</h2>
+                {{#each supplimentaryResponses.volopps.hits.hits}}
+                {{{this._source.rendered.ghq_list}}}
+                {{/each}}
+
+                <h2>Jobs</h2>
+                {{#each supplimentaryResponses.jobs.hits.hits}}
+                {{{this._source.rendered.ghq_list}}}
+                {{/each}}
+
+            </div>
+        </div>
+    </div>
+</div>
