initial mockup of members info

--- a/functions/test-db/json2/scvo/templates/members.hbs
+++ b/functions/test-db/json2/scvo/templates/members.hbs
@@ -23,7 +23,7 @@
     <div class="mdc-layout-grid">
         <div class="mdc-layout-grid__inner">
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 sidebar library-sidebar">
-
+                [Filters TBC]
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9 content library-content">
                 {{#each primaryResponse.hits.hits}}
