Home page styling:

--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -443,12 +443,26 @@ footer .mdc-list .mdc-list-item a:hover {
     .latest-content {
         background-color: var(--mdc-theme-background);
         padding: $spacing-unit 0 $spacing-unit*1.5;
+        .mdc-card__primary {
+            padding: 0;
+        }
         h2 {
             font-size: 1.8rem;
             color: var(--mdc-theme-primary);
+            a {
+                font-size: 1.2rem;
+                display: block;
+            }
+        }
+        h3.mdc-card__title {
+            font-size: 1.3rem;
         }
         .gist {
+            margin-top: $spacing-unit;
             box-shadow: none;
+            .post-info-item {
+                line-height: 1.8;
+            }
         }
     }
 }
