--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -442,7 +442,7 @@ footer .mdc-list .mdc-list-item a:hover {
 
     .latest-content {
         background-color: var(--mdc-theme-background);
-        padding: $spacing-unit 0 $spacing-unit*1.5;
+        padding: $spacing-unit/2 0 $spacing-unit*2;
         .mdc-card__primary {
             padding: 0;
         }
@@ -450,7 +450,7 @@ footer .mdc-list .mdc-list-item a:hover {
             font-size: 1.8rem;
             color: var(--mdc-theme-primary);
             a {
-                font-size: 1.2rem;
+                font-size: 1.1rem;
                 display: block;
             }
         }
@@ -458,7 +458,7 @@ footer .mdc-list .mdc-list-item a:hover {
             font-size: 1.3rem;
         }
         .gist {
-            margin-top: $spacing-unit;
+            margin-top: $spacing-unit*1.5;
             box-shadow: none;
             .post-info-item {
                 line-height: 1.8;
