--- a/functions/test-db/json2/scvo/templates/scvo.hbs
+++ b/functions/test-db/json2/scvo/templates/scvo.hbs
@@ -109,62 +109,62 @@
             </main>
 
             <footer>
-                <div class="footer">
+                <div class="footer-main">
                     <div class="container-fluid">
-                        <div class="footer-main">
-                            <div class="mdc-layout-grid">
-                                <div class="mdc-layout-grid__inner">
-                                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7-desktop mdc-layout-grid__cell--span-5-tablet">
-                                        <a href="/" class="brand-logo" title="Scottish Council for Voluntary Organisations">
-                                            <img src="assets/images/scvo-logo.png" />
-                                        </a>
-                                        <p>The <strong>Scottish Council for Voluntary Organisations</strong> is the membership organisation for Scotland's charities, voluntary organisations and social enterprises.</p>
-                                    </div>
-                                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-1-tablet">
-                                        &nbsp;
-                                    </div>
-                                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-3-tablet">
-                                        <ul class="mdc-list">
-                                            {{#each menus.footer}}
-                                            <li class="mdc-list-item"><a href="{{path}}">{{{label}}}</a></li>
-                                            {{/each}}
-                                        </ul>
-                                    </div>
-                                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-3-tablet">
-                                        <ul class="mdc-list">
-                                            <li class="mdc-list-item">
-                                                <a href="mailto:enquiries@scvo.org.uk">
+                        <div class="mdc-layout-grid">
+                            <div class="mdc-layout-grid__inner">
+                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7-desktop mdc-layout-grid__cell--span-5-tablet">
+                                    <a href="/" class="brand-logo" title="Scottish Council for Voluntary Organisations">
+                                        <img src="assets/images/scvo-logo.png" />
+                                    </a>
+                                    <p>The <strong>Scottish Council for Voluntary Organisations</strong> is the membership organisation for Scotland's charities, voluntary organisations and social enterprises.</p>
+                                </div>
+                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-1-tablet">
+                                    &nbsp;
+                                </div>
+                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-3-tablet">
+                                    <ul class="mdc-list">
+                                        {{#each menus.footer}}
+                                        <li class="mdc-list-item"><a href="{{path}}">{{{label}}}</a></li>
+                                        {{/each}}
+                                    </ul>
+                                </div>
+                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-3-tablet">
+                                    <ul class="mdc-list">
+                                        <li class="mdc-list-item">
+                                            <a href="mailto:enquiries@scvo.org.uk">
 
-                                                    enquiries@scvo.org.uk
-                                                </a>
-                                            </li>
-                                            <li class="mdc-list-item">
-                                                <a href="tel:+441314748000">
-                                                    0131 474 8000
-                                                </a>
-                                            </li>
-                                            <li class="mdc-list-item">
-                                                <a href="https://www.facebook.com/SCVO1939">
-                                                    Facebook
-                                                </a>
-                                            </li>
-                                            <li class="mdc-list-item">
-                                                <a href="https://twitter.com/scvotweet">
-                                                    Twitter
-                                                </a>
-                                            </li>
-                                        </ul>
-                                    </div>
+                                                enquiries@scvo.org.uk
+                                            </a>
+                                        </li>
+                                        <li class="mdc-list-item">
+                                            <a href="tel:+441314748000">
+                                                0131 474 8000
+                                            </a>
+                                        </li>
+                                        <li class="mdc-list-item">
+                                            <a href="https://www.facebook.com/SCVO1939">
+                                                Facebook
+                                            </a>
+                                        </li>
+                                        <li class="mdc-list-item">
+                                            <a href="https://twitter.com/scvotweet">
+                                                Twitter
+                                            </a>
+                                        </li>
+                                    </ul>
                                 </div>
                             </div>
-                            <div class="footer-copyright">
-                                <div class="row">
-                                    <div class="col-sm-12">
-                                        <p>
-                                            &copy; 2017. The Scottish Council for Voluntary Organisations (SCVO) is a Scottish Charitable Incorporated Organisation. Charity registered in Scotland <a href="http://www.oscr.org.uk/charities/search-scottish-charity-register/charity-details?number=SC003558">SC003558</a>.
-                                        </p>
-                                    </div>
-                                </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer-copyright">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <p>
+                                    &copy; 2017. The Scottish Council for Voluntary Organisations (SCVO) is a Scottish Charitable Incorporated Organisation. Charity registered in Scotland <a href="http://www.oscr.org.uk/charities/search-scottish-charity-register/charity-details?number=SC003558">SC003558</a>.
+                                </p>
                             </div>
                         </div>
                     </div>
