Fixed TFN on posts page

--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -469,6 +469,7 @@ a:hover {
             }
             .thumbnail {
                 margin-top: $spacing-unit/2;
+                display: block;
                 img {
                     border-radius: 50%;
                     width: 64px;
