--- a/functions/test-db/json2/scvo/templates/post.hbs
+++ b/functions/test-db/json2/scvo/templates/post.hbs
@@ -42,7 +42,7 @@
                     <div class="mdc-layout-grid__inner">
                         {{#each supplimentaryResponses.tfn_related_posts.hits.hits}}
                         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
-                            {{{_source.rendered.sidebar}}}
+                            {{{_source.rendered.gist}}}
                         </div>
                         {{/each}}
                     </div>
