--- a/functions/test-db/json2/scvo/templates/home.hbs
+++ b/functions/test-db/json2/scvo/templates/home.hbs
@@ -1,23 +1,23 @@
-<!-- <section class="featured-content">
+<section class="featured-content">
     <div class="container-fluid">
-        {{#each primaryResponse.hits.hits}}
-        {{{_source.rendered.featured}}}
-        {{/each}}
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <h1 style="text-align:center;">TBC</h1>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <!-- { {#each primaryResponse.hits.hits}}
+        { { {_source.rendered.featured}}}
+        { {/each}} -->
     </div>
-</section> -->
-
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<h1>TBC</h1>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-
+</section>
 
 <section class="latest-content">
     <div class="container-fluid">
