--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -455,6 +455,9 @@ a:hover {
                 display: block;
             }
         }
+        .gist {
+            box-shadow: none;
+        }
         .mdc-card__primary {
             padding: 0;
         }
@@ -462,7 +465,6 @@ a:hover {
 }
 .gist {
     margin-top: $spacing-unit*1.5;
-    box-shadow: none;
     h3.mdc-card__title {
         font-size: 1.2rem;
         line-height: 1.4;
