--- a/functions/test-db/json2/scvo/templates/event-search.hbs
+++ b/functions/test-db/json2/scvo/templates/event-search.hbs
@@ -56,13 +56,7 @@
 
     {{#each primaryResponse.hits.hits}}
         <div class="v-margin">
-            {{#if _source.rendered.search_result_scvo}}
-                {{{_source.rendered.search_result_scvo}}}
-            {{else}}
-                {{#if _source.rendered.search_result}}
-                    {{{_source.rendered.search_result}}}
-                {{/if}}
-            {{/if}}
+            {{{_source.rendered.list}}}
         </div>
     {{/each}}
 
