--- a/functions/test-db/json2/scvo/templates/post.hbs
+++ b/functions/test-db/json2/scvo/templates/post.hbs
@@ -23,7 +23,6 @@
                 {{/with}}
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 sidebar post-sidebar">
-                <h3 class="author">{{primaryResponse.hits.hits.[0]._source.author_name_full}}</h3>
                 <div class="author_about">
                     {{#if supplimentaryResponses.staff_profile.hits.hits.[0]}}
                     {{{supplimentaryResponses.staff_profile.hits.hits.[0]._source.rendered.scvo_profile}}}
@@ -31,11 +30,14 @@
                     {{{supplimentaryResponses.author_profile.hits.hits.[0]._source.rendered.scvo_profile}}}
                     {{/if}}
                 </div>
+                {{#if supplimentaryResponses.staff_profile.hits.hits}}
+                <h3 class="author">More posts by {{primaryResponse.hits.hits.[0]._source.author_name_full}}</h3>
                 <ul class="supplimentary-list">
                     {{#each supplimentaryResponses.authors_posts.hits.hits}}
                     {{{_source.rendered.sidebar}}}
                     {{/each}}
                 </ul>
+                {{/if}}
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 related post-related">
                 <div class="mdc-layout-grid">
